<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_save_text"
        android:title="Guardar"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_edit_profile"
        android:icon="@drawable/round_edit_24"
        android:title="edit"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_cancel_edit_profile"
        android:title="cancel"
        android:visible="false"
        android:icon="@drawable/outline_close_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_more_options"
        android:title="more"
        android:icon="@drawable/baseline_more_vert_24"
        app:showAsAction="always" />
</menu>