...
        android:id="@+id/navigation_menu_invoice"
        android:enabled="true"
        android:icon="@drawable/baseline_list_24"
        android:title="@string/invoice_menu_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_menu_profile"
        android:enabled="true"
        android:icon="@drawable/baseline_face_black_18dp"
        android:title="@string/profile_menu_text"
        app:showAsAction="ifRoom" />
</menu>
